<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lucas.moneymanager.activity.PurchaseLog"
    android:background="@color/green">

    <TextView
        android:id="@+id/textView6"
        style="@style/BlurredForeFront"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/textview_spendtAmountTitle"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textview_purchaselog_availableMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:fontFamily="serif"
        android:text="0.00"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <ImageButton
        android:id="@+id/imageButton_purchaseLog_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        style="@style/InvisibleButton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:onClick="returnToParentActivity"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/purchase_log"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton_purchaseLog_back"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintLeft_toRightOf="@+id/imageButton_purchaseLog_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton_purchaseLog_back"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/button_purchaseLog_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/reset_budget"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/listView_purchase_items"
        app:layout_constraintVertical_bias="0.984"
        android:onClick="resetLog"/>

    <ListView
        android:id="@+id/listView_purchase_items"
        android:layout_width="233dp"
        android:layout_height="327dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.499"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_purchaselog_availableMoney"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
